feat: price and time estimations
